--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="/style/style.css">
     <!--<link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="/style/bootstrap.min.css">
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
   </head>
   <body>
-    <div class="container"></div>
+    <div class="app"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
